# php-node

./: .clangd  .gitignore  .npmignore  CLAUDE.md  Cargo.toml  INTERNALS.md  README.md  build.rs  compile_flags.txt  index.d.ts  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: CI.yml  build-and-test.yml  lint.yml  release.yml
__test__/: handler.spec.mjs  headers.spec.mjs  index.spec.mjs  request.spec.mjs  response.spec.mjs  rewriter.spec.mjs  streaming.spec.mjs  util.mjs
crates/lang_handler/: Cargo.toml  build.rs
crates/lang_handler/src/: ffi.rs  handler.rs  headers.rs  lib.rs  request.rs  response.rs  test.rs  url.rs
crates/lang_handler/src/rewrite/: conditional_rewriter.rs  mod.rs
crates/lang_handler/src/rewrite/condition/: closure.rs  existence.rs  group.rs  header.rs  method.rs  mod.rs  path.rs  set.rs
crates/lang_handler/src/rewrite/rewriter/: closure.rs  header.rs  href.rs  method.rs  mod.rs  path.rs  sequence.rs  set.rs
crates/php/: Cargo.toml  build.rs
crates/php/src/: embed.rs  exception.rs  lib.rs  main.rs  php_wrapper.c  request.rs  request_context.rs  response.rs  rewriter_impl.rs  sapi.rs  scopes.rs  strings.rs  test.rs
crates/php_node/: Cargo.toml  build.rs
crates/php_node/src/: headers.rs  lib.rs  request.rs  response.rs  rewriter.rs  runtime.rs
demo/: index.html  index.php  server.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build-php.sh  download-php.sh  extensions.sh  fetch-spc.sh  update-version.mjs
src/: README.md  embed.rs  exception.rs  extensions.rs  lib.rs  main.rs  napi.rs  request_context.rs  rewriter_impl.rs  sapi.rs  scopes.rs
