[package]
edition = "2021"
name = "php"
version = "1.4.0"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "MIT"
repository = "https://github.com/platformatic/php-node"

[features]
default = []
napi-support = ["dep:napi", "dep:napi-derive", "dep:napi-build", "http-handler/napi-support", "http-rewriter/napi-support"]

[lib]
name = "php"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "php-main"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
hostname = "0.4.1"
ext-php-rs = { version = "0.14.0", features = ["embed"] }
http-handler = { git = "https://github.com/platformatic/http-handler.git" }
# http-handler = { path = "../http-handler" }
http-rewriter = { git = "https://github.com/platformatic/http-rewriter.git" }
# http-rewriter = { path = "../http-rewriter" }
libc = "0.2.171"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "3", optional = true }
once_cell = "1.21.0"
tokio = { version = "1.45", features = ["rt", "macros", "rt-multi-thread"] }
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
autotools = "0.2"
bindgen = "0.69.4"
cc = "1.1.7"
downloader = "0.2.8"
file-mode = "0.1.2"
napi-build = { version = "2.2.1", optional = true }

# [profile.release]
# lto = true
# strip = "symbols"
