[package]
edition = "2021"
name = "lang_handler"
version = "0.0.0"

[lib]
name = "lang_handler"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
napi = ["dep:napi", "dep:napi-build"]

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[dependencies]
bytes = "1.10.1"
napi = { version = "2.16.17", optional = true }
regex = "1.11.1"
url = "2.5.4"
