[package]
edition = "2021"
name = "php"
version = "0.0.0"

[lib]
name = "php"
path = "src/lib.rs"

[[bin]]
name = "php-main"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
hostname = "0.4.1"
ext-php-rs = { git = "https://github.com/platformatic/ext-php-rs.git" }
http-handler = { git = "ssh://git@github.com/platformatic/http-handler.git" }
# http-handler = { path = "../../../http-handler" }
http-rewriter = { git = "ssh://git@github.com/platformatic/http-rewriter.git" }
# http-rewriter = { path = "../../../http-rewriter" }
libc = "0.2.171"
once_cell = "1.21.0"
tokio = { version = "1.45", features = ["rt", "macros", "rt-multi-thread"] }
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
autotools = "0.2"
bindgen = "0.69.4"
cc = "1.1.7"
downloader = "0.2.8"
file-mode = "0.1.2"
