[package]
edition = "2021"
name = "php"
version = "0.0.0"

[lib]
name = "php"
path = "src/lib.rs"

[[bin]]
name = "php-main"
path = "src/main.rs"

[dependencies]
bytes = "1.10.1"
hostname = "0.4.1"
ext-php-rs = { version = "0.14.0", features = ["embed"] }
lang_handler = { path = "../lang_handler", features = ["napi"] }
libc = "0.2.171"
once_cell = "1.21.0"

[build-dependencies]
autotools = "0.2"
bindgen = "0.69.4"
cc = "1.1.7"
downloader = "0.2.8"
file-mode = "0.1.2"
