[package]
edition = "2021"
name = "php_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
php = { path = "../php" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
bytes = "1.0"
http-handler = { path = "../../../http-handler", features = ["napi-support"] }
http-rewriter = { path = "../../../http-rewriter", features = ["napi-support"] }

[build-dependencies]
napi-build = "2.2.1"
