[package]
edition = "2021"
name = "php_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
php = { path = "../php" }

[build-dependencies]
napi-build = "2.2.1"
